--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,22 @@
-boto3==1.15.13
-click==8.0.0
-Flask==2.1.0
-Flask-Caching==1.9.0
-waitress==2.1.2
-packaging==20.4
-requests==2.24.0
-jinja2==3.0.3
+blinker==1.7.0
+boto3==1.34.38
+botocore==1.34.38
+cachelib==0.9.0
+certifi==2024.2.2
+charset-normalizer==3.3.2
+click==8.1.7
+Flask==3.0.2
+Flask-Caching==2.1.0
+idna==3.6
+itsdangerous==2.1.2
+Jinja2==3.1.3
+jmespath==1.0.1
+MarkupSafe==2.1.5
+packaging==23.2
+python-dateutil==2.8.2
+requests==2.31.0
+s3transfer==0.10.0
+six==1.16.0
+urllib3==2.0.7
+waitress==3.0.0
+Werkzeug==3.0.1
